Added credit for AI assistance

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
   </main>
   <footer>
     <p>&copy; 2024 Atharva Shankar Jedhe</p>
+    <div class="ai-credit-badge">
+      <a href="https://openai.com/chatgpt" target="_blank" title="AI Assisted" style="text-decoration:none;">
+        <span style="font-size:1.1em; vertical-align:middle; margin-right:0.3em;">🤖</span>
+        <span style="color:#00bcd4; font-weight:600; vertical-align:middle;">AI Assisted</span>
+      </a>
+    </div>
   </footer>
   <script src="script.js"></script>
 </body>
