--- a/resume_old.html
+++ b/resume_old.html
@@ -512,23 +512,52 @@
             <h1>Atharva Shankar Jedhe</h1>
             <h2>Aspiring Software Developer</h2>
         </div>
-        <!-- Targeted Summary -->
+        <!-- About -->
         <div class="section about-section">
-            <h2 class="section-title">Resume Summary</h2>
+            <h2 class="section-title">About</h2>
             <p style="font-size: 14px; line-height: 1.5; color: #555;">
-                Motivated and detail-oriented Computer Science graduate (CGPA: 7.97, Pune University) currently pursuing M.Sc., with a strong foundation in C/C++, OOP, algorithms, and data structures. Experienced in OpenGL, Git, and real-time rendering projects. Adept at quickly learning new technologies, collaborating in teams, and delivering high-quality results. Seeking to leverage my technical and analytical skills as a Software Development Engineer (Trainee).<br>
-                <b>Key strengths:</b> C/C++, OOP, Data Structures, Algorithms, OpenGL, Git, English proficiency, flexibility, and proactivity.
+                Currently pursuing M.Sc. in Computer Science with a focus on native software development. 
+                Passionate about turning ideas into code and continuously exploring new tools to improve development skills. 
+                Strong foundation in computer fundamentals, data structures, and modern programming technologies.
             </p>
         </div>
-        <!-- Key Skills -->
+
+        <!-- Education -->
+        <div class="section">
+            <h2 class="section-title">Education</h2>
+            <div class="education-item">
+                <h3>M.Sc. Computer Science</h3>
+                <div class="institution">Pune University</div>
+                <div class="date">2024 – 2026</div>
+            </div>
+            <div class="education-item">
+                <h3>B.Sc. Computer Science</h3>
+                <div class="institution">Pune University</div>
+                <div class="date">2021 – 2024</div>
+                <div class="date">CGPA: 7.97</div>
+            </div>
+            <div class="education-item">
+                <h3>HSC – 80%</h3>
+                <div class="institution">P.V.G.'s Muktangan English School and College</div>
+                <div class="date">2019 – 2021</div>
+            </div>
+            <div class="education-item">
+                <h3>SSC – 85.40%</h3>
+                <div class="institution">New English School Ramanbaug</div>
+                <div class="date">2018 – 2019</div>
+            </div>
+        </div>
+
+        <!-- Skills -->
         <div class="section">
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h4>Programming Skills</h4>
+                    <h4>Programming Languages</h4>
                     <div class="skill-list">
                         <span class="skill-tag">C Language</span>
                         <span class="skill-tag">C++</span>
+                        <span class="skill-tag">HTML & CSS</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -536,7 +565,7 @@
                     <div class="skill-list">
                         <span class="skill-tag">Data Structures</span>
                         <span class="skill-tag">Algorithms</span>
-                        <span class="skill-tag">Operating System Fundamentals</span>
+                        <span class="skill-tag">Operating Systems</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -550,8 +579,8 @@
                 <div class="skill-category">
                     <h4>Parallel Computing</h4>
                     <div class="skill-list">
-                        <span class="skill-tag">CUDA (Beginner)</span>
-                        <span class="skill-tag">OpenCL (Beginner)</span>
+                        <span class="skill-tag">CUDA</span>
+                        <span class="skill-tag">OpenCL</span>
                         <span class="skill-tag">Heterogeneous Programming</span>
                     </div>
                 </div>
@@ -565,56 +594,33 @@
                 </div>
             </div>
         </div>
-        <!-- Education -->
-        <div class="section">
-            <h2 class="section-title">Education</h2>
-            <div class="education-item">
-                <h3>M.Sc. Computer Science</h3>
-                <div class="institution">Pune University</div>
-                <div class="date">2024 – 2026 (Pursuing)</div>
-            </div>
-            <div class="education-item">
-                <h3>B.Sc. Computer Science</h3>
-                <div class="institution">Pune University</div>
-                <div class="date">2021 – 2024</div>
-                <div class="date"><b style='color:#00bcd4;'>CGPA: 7.97</b></div>
-            </div>
-            <div class="education-item">
-                <h3>HSC – 80%</h3>
-                <div class="institution">P.V.G.'s Muktangan English School and College</div>
-                <div class="date">2019 – 2021</div>
-            </div>
-            <div class="education-item">
-                <h3>SSC – 85.40%</h3>
-                <div class="institution">New English School Ramanbaug</div>
-                <div class="date">2018 – 2019</div>
-            </div>
-        </div>
-        <!-- Projects & Experience -->
+
+        <!-- Projects -->
         <div class="section">
             <h2 class="section-title">Projects</h2>
             <div class="project-item">
-                <h3>Real-Time Rendering Project – Manzar</h3>
-                <div class="description">
-                    Advanced real-time rendering project using OpenGL and C++ to demonstrate modern graphics techniques.
-                    <a href="https://www.youtube.com/watch?v=m3pOsg6cCUo" target="_blank" style="margin-left:0.5em;font-size:0.95em;">[Demo]</a>
-                </div>
-                <div class="tech">Technologies: OpenGL, C++, Real-Time Rendering</div>
-            </div>
-            <div class="project-item">
                 <h3>WebGL Project – Sapano Ki Bahen</h3>
                 <div class="description">
-                    WebGL application demonstrating 3D graphics and web technologies.
+                    WebGL application demonstrating 3D graphics and web technologies
                     <a href="https://www.youtube.com/watch?v=0TnZE2jztNw" target="_blank" style="margin-left:0.5em;font-size:0.95em;">[Demo]</a>
                 </div>
                 <div class="tech">Technologies: WebGL, JavaScript, HTML5</div>
             </div>
             <div class="project-item">
+                <h3>Real-Time Rendering Project – Manzar</h3>
+                <div class="description">
+                    Advanced real-time rendering project showcasing modern graphics techniques
+                    <a href="https://www.youtube.com/watch?v=m3pOsg6cCUo" target="_blank" style="margin-left:0.5em;font-size:0.95em;">[Demo]</a>
+                </div>
+                <div class="tech">Technologies: OpenGL, C++, Real-Time Rendering</div>
+            </div>
+            <div class="project-item">
                 <h3>2D Game – Pacman</h3>
-                <div class="description">Classic Pacman game implementation with modern programming practices.</div>
+                <div class="description">Classic Pacman game implementation with modern programming practices</div>
                 <div class="tech">Technologies: C++, Game Development, 2D Graphics</div>
             </div>
         </div>
+
         <!-- Certifications -->
         <div class="section">
             <h2 class="section-title">Certifications</h2>
@@ -637,35 +643,22 @@
                 </div>
             </div>
         </div>
-        <!-- Seminars & Workshops -->
+
+        <!-- Seminars -->
         <div class="section">
             <h2 class="section-title">Seminars & Workshops</h2>
             <div class="project-item">
                 <h3>Computer Fundamentals</h3>
-                <div class="description">Comprehensive overview of computer architecture and basic principles.</div>
+                <div class="description">Comprehensive overview of computer architecture and basic principles</div>
             </div>
             <div class="project-item">
                 <h3>Multi-OS Installation</h3>
-                <div class="description">Hands-on workshop on installing and configuring multiple operating systems.</div>
+                <div class="description">Hands-on workshop on installing and configuring multiple operating systems</div>
             </div>
             <div class="project-item">
                 <h3>Heterogeneous Parallel Programming</h3>
-                <div class="description">Advanced seminar on CUDA and OpenCL for parallel computing.</div>
+                <div class="description">Advanced seminar on CUDA and OpenCL for parallel computing</div>
             </div>
-        </div>
-        <!-- Soft Skills -->
-        <div class="section">
-            <h2 class="section-title">Soft Skills</h2>
-            <ul style="margin-left: 1.2em; color: #555; font-size: 14px;">
-                <li>Quick learner, flexible, and proactive</li>
-                <li>Strong analytical and problem-solving skills</li>
-                <li>Effective team collaboration and communication</li>
-                <li>Ability to deliver high-quality reports and documentation</li>
-            </ul>
-        </div>
-        <!-- Footer Note -->
-        <div class="section" style="text-align:center; color:#888; font-size:12px; margin-top:30px;">
-            References available upon request.
         </div>
     </div>
 </body>
