--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Atharva Shankar Jedhe</h1>
         <h2>Aspiring Software Developer</h2>
       </div>
-      <a href="Atharva_Jedhe_Resume.pdf" target="_blank" class="resume-download-btn header-resume-btn">
+      <a href="Atharva_Shankar_Jedhe_Resume.pdf" target="_blank" class="resume-download-btn header-resume-btn">
         <i class="fas fa-download"></i> Download Resume
       </a>
     </div>
