--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Atharva Shankar Jedhe</h1>
         <h2>Aspiring Software Developer</h2>
       </div>
-      <a href="Atharva_Shankar_Jedhe_Resume.pdf" target="_blank" class="resume-download-btn header-resume-btn">
+      <a href="Atharva_Jedhe_Resume.pdf" target="_blank" class="resume-download-btn header-resume-btn">
         <i class="fas fa-download"></i> Download Resume
       </a>
     </div>
@@ -49,7 +49,7 @@
       <h3 class="about-title">About</h3>
       <p>
         <span id="about-typing"></span><span class="about-underline"></span>
-        <span class="about-fade"> I'm currently pursuing my M.Sc. in Computer Science with a focus on native software development. I love turning ideas into code and am always exploring new tools to improve my craft.</span>
+        <span class="about-fade"> I'm currently pursuing my M.Sc. in Computer Science with a focus on web and software development. I love turning ideas into code and am always exploring new tools to improve my craft.</span>
       </p>
     </section>
     <section id="education">
@@ -160,7 +160,7 @@
         <a class="contact-btn email" href="mailto:atharvajedhe.1106@gmail.com"><i class="fas fa-envelope"></i> Email</a>
         <a class="contact-btn phone" href="tel:+919373275997"><i class="fas fa-phone"></i> Phone</a>
         <a class="contact-btn linkedin" href="https://www.linkedin.com/in/atharva-jedhe-5a2433256/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a class="contact-btn gitlab" href="https://gitlab.com/XSneha/rtr5-atharva" target="_blank"><i class="fab fa-gitlab"></i> GitLab</a>
+        <a class="contact-btn gitlab" href="https://gitlab.com/atharvajedhe.1106/real-time-rendering-assignments" target="_blank"><i class="fab fa-gitlab"></i> GitLab</a>
         <a href="Atharva_Jedhe_Resume.pdf" target="_blank" class="resume-download-btn">
           <i class="fas fa-download"></i> Download Resume
         </a>
@@ -170,7 +170,7 @@
         <li>Phone: <a href="tel:+919373275997">+91 9373275997</a></li>
         <li>Location: Sahakarnagar, Pune, Maharashtra 411009</li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/atharva-jedhe-5a2433256/" target="_blank">atharva-jedhe-5a2433256</a></li>
-        <li>GitLab: <a href="https://gitlab.com/XSneha/rtr5-atharva" target="_blank">XSneha/rtr5-atharva</a></li>
+        <li>GitLab: <a href="https://gitlab.com/atharvajedhe.1106/real-time-rendering-assignments" target="_blank">atharvajedhe.1106/real-time-rendering-assignments</a></li>
       </ul>
     </section>
   </main>
