Updated about info

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h3 class="about-title">About</h3>
       <p>
         <span id="about-typing"></span><span class="about-underline"></span>
-        <span class="about-fade"> I'm currently pursuing my M.Sc. in Computer Science with a focus on web and software development. I love turning ideas into code and am always exploring new tools to improve my craft.</span>
+        <span class="about-fade"> I'm currently pursuing my M.Sc. in Computer Science with a focus in native software development. I love turning ideas into code and am always exploring new tools to improve my craft.</span>
       </p>
     </section>
     <section id="education">
